Optimizar importación de fuentes y mejorar la semántica del HTML

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         />
 
         <div class="card-content">
-          <div class="card-badge">Learning</div>
+          <mark class="card-badge">Learning</mark>
 
-          <div class="card-published-date">Published 21 Dec 2023</div>
+          <time class="card-published-date">Published 21 Dec 2023</time>
 
           <h2 class="card-title">HTML & CSS foundations</h2>
 
@@ -36,14 +36,14 @@
             structure, content, and presentation.
           </p>
 
-          <div class="card-author">
+          <address class="card-author">
             <img
               src="./assets/images/image-avatar.webp"
               alt="user avatar"
               class="card-avatar"
             />
             <p class="card-author-name">Greg Hooper</p>
-          </div>
+          </address>
         </div>
       </article>
     </div>
