change html elements

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         />
 
         <div class="card-content">
-          <mark class="card-badge">Learning</mark>
+          <span class="card-badge">Learning</span>
 
           <time class="card-published-date">Published 21 Dec 2023</time>
 
@@ -36,14 +36,14 @@
             structure, content, and presentation.
           </p>
 
-          <address class="card-author">
+          <footer class="card-author">
             <img
               src="./assets/images/image-avatar.webp"
               alt="user avatar"
               class="card-avatar"
             />
             <p class="card-author-name">Greg Hooper</p>
-          </address>
+          </footer>
         </div>
       </article>
     </div>
